--- a/app.html
+++ b/app.html
@@ -5,6 +5,11 @@
 <input value="a" style="max-width:30px" class="val"><input value="b" style="max-width:30px" class="val">
 <input value="c" style="max-width:30px" class="val">
 
+<!-- try uncomment 
+<input value="d" style="max-width:30px" class="val">
+<input value="1" style="max-width:30px" class="val">
+-->
+
 <div id="arr"></div>
 <div id="demo"></div>
 
